# bk_precision_1900

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
bk/: bk1902b.py
bk_precision_1900/: bk1902b.py  bk_demo.py
