[tool.poetry]
name = "bk_precision_1900"
version = "0.2.0"
description = "Control the BK Precision 1900 series power supplies"
authors = ["Carlos Asmat <casmat@dephy.com>"]
license = "MIT"
repository = "https://github.com/DephyInc/bk_precision_1900"
readme = "README.md"
keywords = ["B&K", "BK Precision", "hardware"]

[tool.poetry.dependencies]
python = "^3.10"
pyserial = "^3.5"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
isort = "^5.11.2"
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bk_ctrl = "bk.bk_demo:cli"
